--- a/sass/_utils.scss
+++ b/sass/_utils.scss
@@ -15,13 +15,17 @@
   }
 }
 
+@mixin transition($props, $multiplier: 1) {
+  @media not (prefers-reduced-motion) {
+    transition-property: $props;
+    transition-duration: $poly-ui-transition-time * $multiplier;
+    transition-timing-function: $poly-ui-transition-fn;
+  }
+}
+
 @mixin hover() {
   &, * {
-    @media not (prefers-reduced-motion) {
-      transition-property: box-shadow, color, background-color;
-      transition-duration: $poly-ui-transition-time;
-      transition-timing-function: $poly-ui-transition-fn;
-    }
+    @include transition($props: (box-shadow, color, background-color))
   }
   &:hover {
     @content;
